// Copyright 2025 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.scopes.joining.v1;

import "teleport/header/v1/metadata.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/scopes/joining/v1;joiningv1";

// ScopedToken is a token whose resource and permissions are scoped. Scoped tokens are used for the provisioning
// of teleport agents locked to specific scopes. Scoped tokens implement a subset of the functionality of standard
// provisioning tokens, specifically tailored to the usecase of limited admins/users provisioning resources within
// sub-scopes over which they have been granted elevated privileges.
message ScopedToken {
  // Kind is the resource kind.
  string kind = 1;

  // SubKind is the resource sub-kind.
  string sub_kind = 2;

  // Version is the resource version.
  string version = 3;

  // Metadata contains the resource metadata.
  teleport.header.v1.Metadata metadata = 4;

  // Scope is the scope of the token resource.
  string scope = 5;

  // Spec is the token specification.
  ScopedTokenSpec spec = 6;
}

// ScopedTokenSpec is the specification of a scoped token.
message ScopedTokenSpec {
  // The scope to which this token is assigned.
  string assigned_scope = 1;

  // The list of roles associated with the token. They will be converted
  // to metadata in the SSH and X509 certificates issued to the user of the
  // token.
  repeated string roles = 2;

  // The joining method required in order to use this token.
  // Supported joining methods for scoped tokens only include 'token'.
  string join_method = 3;
}
